# glent

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
assets/: base.glsl  fs_base.glsl  fs_water.glsl  rt.glsl  vs_base.glsl  vs_water.glsl
source/: CMakeLists.txt  glent.cpp  glint.cpp  graphics.cpp  graphics.hpp  graphics_gl.cpp  graphics_gl.hpp  graphics_shaders.hpp  graphics_utils.cpp  graphics_utils.hpp  input.cpp  input.hpp
